# agents-swarm

./: README.md  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  researcher.py  supervisor.py
app/core/: __init__.py  event_bus.py  llm.py  search.py
app/domain/: __init__.py  models.py
